--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,7 @@ body {
 
 .container {
   background-color: red;
-  margin: 0 auto 0 auto;
-  width: 220px;
-  max-width: 700px;
+  text-align: center;
 }
 
 .menu {
@@ -24,50 +22,11 @@ body {
   background-color :#33b5e5;
 }
 
-.row {
-  display: inline-block;
-  width: 100%
-}
-
-.row::after {
-  content: "";
-  clear:both;
-}
 
 [class*="col-"] {
   float: left;
   padding: 15px;
   width: 100%;
-}
-
-@media only screen and (min-width: 600px) {
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
-}
-
-@media only screen and (min-width: 768px) {
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
 }
 
 #header {
@@ -84,6 +43,8 @@ body {
   display: inline-block;
 }
 
+
+
 h1 {
   display: block;
   margin-block-start: 0em;
@@ -98,12 +59,30 @@ img {
   }
 
 /* TEXT IN IMAGES */
-.previewbaku, .previewlondon, .previewrome, .previewmadrid {
-  position: relative;
-  text-align: left;
-  color: black;
-  margin-block-end: 1em;
+.preview {
+  height: 300px;
+  display: inline-block;
+  width: 100%;
+  background-size: cover;
+  margin: 10px;
 }
+
+.baku {
+background-image: url("../images/baku.jpg")
+}
+
+.london {
+background-image: url("../images/london.png")
+}
+
+.madrid {
+background-image: url("../images/madrid.jpg")
+}
+
+.rome {
+background-image: url("../images/rome.jpg")
+}
+
 
 .top-left {
     position: absolute;
@@ -111,7 +90,26 @@ img {
     left: 6px
 }
 
+@media only screen and (min-width: 600px) {
+  .preview {
+    width: 45%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .preview {
+    width:20%;
+  }
+}
 /*
+
+position: relative;
+text-align: left;
+color: black;
+margin-block-end: 1em;
+
+
+
 For mobile phones: *
 [class*="col-"] {
   width: 100%;
@@ -153,7 +151,35 @@ For mobile phones: *
   .col-12 {width: 100%;}
 }
 
+@media only screen and (min-width: 600px) {
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
 
+@media only screen and (min-width: 768px) {
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
 /*
 
 display:flex;
