--- a/css/style.css
+++ b/css/style.css
@@ -4,23 +4,24 @@
 }
 
 body {
-  background-color: green;
+  background-color: #c8c8c8;
   font-family: normal;
   font-size: 1em;
   flex-flow: wrap;
+  margin: 8;
 }
 
 /* the stuff contained... yes... */
 .container {
-  background-color: red;
+  background-color: #c8c8c8;
   text-align: center;
   margin: 0 auto;
 }
 
 .container > h1 {
   font-family: 'Open Sans Serif', sans-serif;
-  background-color: blue;
-  padding: 1em;
+  background-color: #c8c8c8;
+  padding: 2em;
   text-transform: uppercase;
 }
 
@@ -30,10 +31,11 @@ body {
   display: inline-block;
   width: 100%;
   background-size: cover;
-  margin: 0 auto;
+  margin: 5px 10px 10px;
   margin-bottom: 10px;
   text-align: left;
   padding: 1em;
+
 }
 
 /* IMAGES */
@@ -53,11 +55,18 @@ body {
   background-image: url("../images/rome.jpg")
 }
 
-@media only screen and (min-width: 768px) {
+@media and (min-width: 320px) {
   .preview {
-    width: 20%;
+    width: 40%;
   }
 }
+
+@media only screen and (min-width: 768px) {
+  .preview {
+    width: 40%;
+  }
+}
+
 
 @media only screen and (min-width: 1000px) {
   .preview {
